# trekker

./: ..gitignore.kate-swp  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh  build_Linux.sh  build_Windows.bat  build_dev.sh  build_linux.sh  build_macOS.sh  build_macos.sh  build_win.bat  macosTest.sh  meson.build  meson_options.txt  trekker.kdev4
.cache/clangd/index/: PTF.cpp.E272AF340618AF68.idx  PTF.h.BDAD07E85072987B.idx  algorithm.cpp.19EB3EB5F641ADBB.idx  algorithm.h.842C50B38A1B5BE3.idx  algorithm_local_probabilistic.cpp.3345E02D52A3AF1A.idx  algorithm_local_probabilistic.h.4F15DFED53538116.idx  algorithm_local_probabilistic_defaults.cpp.4367B808EB3CF8CC.idx  algorithm_local_probabilistic_defaults.h.F8491B09105A7A50.idx  algorithm_local_probabilistic_estimatePosteriorMax.cpp.CC54510750AFA9AE.idx  algorithm_local_probabilistic_initialize.cpp.1D800677653E22BA.idx  algorithm_local_probabilistic_propagate.cpp.00A3A57BD31E2D28.idx  algorithm_local_probabilistic_rejectionSample.cpp.36EFBDE8742EA972.idx  algorithm_ptt.cpp.4EAA9FE584900280.idx  algorithm_ptt.h.C7E1A8F70B70BC66.idx  algorithm_ptt_defaults.cpp.42810E50E6AA0B32.idx  algorithm_ptt_defaults.h.C61D0215174CBE12.idx  algorithm_ptt_estimatePosteriorMax.cpp.3FC681BF40BE84D1.idx  algorithm_ptt_initialize.cpp.309BEB81E6E5D312.idx  algorithm_ptt_propagate.cpp.26DF264566A29F8D.idx  algorithm_ptt_rejectionSample.cpp.0A00E293C55946C5.idx  cmd.cpp.6F4262F6681250A0.idx  config_general.cpp.1D68CB715A7A3F8D.idx  config_general.h.125075B1DB89A7C2.idx  config_output.cpp.E820549812AC312E.idx  config_output.h.98321D3B958EF5E5.idx  config_pathway.cpp.CA75B7D63B1A8DC7.idx  config_pathway.h.81A7C910B63E8DAC.idx  config_seeding.cpp.A117CD7BB5F5DEF2.idx  config_seeding.h.0E7466EFCDDE0555.idx  config_tracker.cpp.6942269EB1B63130.idx  config_tracker.h.2C29A5078E4E980B.idx  coordinate.cpp.7ECF31EA0618402D.idx  coordinate.h.E206C068359D9E40.idx  doRandomThings.cpp.482472366BC72693.idx  doRandomThings.h.79C3F4F95EA5555B.idx  fod_image.cpp.0BA40A85C694743C.idx  fod_image.h.89A35A9A5785EC44.idx  image.cpp.D60C47923B2A28C7.idx  image.h.06439C5FCC45B9FC.idx  inputParser.cpp.F944EDEE6B6699EB.idx  (+35 more)
.github/workflows/: build_shared.yml  build_static.yml  macOsTest.yml  test.yml  test_linux.yml  test_mac.yml  test_win.yml  wheels.yml
.kdev4/: trekker.kdev4
binaries/: Trekker-0.4-cp37-cp37m-linux_x86_64.whl  Trekker-0.5-cp37-cp37m-linux_x86_64.whl  Trekker-0.5-cp37-cp37m-win_amd64.whl  Trekker-0.6-cp37-cp37m-linux_x86_64.whl  Trekker-0.6-cp37-cp37m-win_amd64.whl  Trekker-0.7-cp37-cp37m-linux_x86_64.whl  Trekker-0.7-cp37-cp37m-win_amd64.whl  Trekker-0.8-cp37-cp37m-linux_x86_64.whl  Trekker-0.8-cp37-cp37m-win_amd64.whl  Trekker-0.9-cp37-cp37m-linux_x86_64.whl  Trekker-0.9-cp37-cp37m-win_amd64.whl  Trekker-0.9-cp38-cp38-linux_x86_64.whl  Trekker-0.9-cp38-cp38-win_amd64.whl  trekker_linux_x64_v0.4  trekker_linux_x64_v0.4_yap  trekker_linux_x64_v0.9
build_win/include/nibrary_v0.3.0/: nibrary.h
build_win/lib/nibrary_v0.3.0/: dcm2niixfs.lib  zlibstatic.lib
demo/: linux_demo.sh  linux_demo_output.vtk  linux_demo_output1.json  linux_demo_output1.vtk  linux_demo_output2.json  linux_demo_output2.vtk  python_demo.py  win_demo.bat
demo/data/: FOD.nii  seedCoordinates.txt  seedImage.nii
doc/: Makefile  build.sh  make.bat
doc/source/: conf.py  index.rst
doc/source/about/: acknowledgements.rst  awards.rst  licenseAndWarranty.rst
doc/source/commands/: addColor.rst  convert.rst  dMRI.rst  diff.rst  fieldExport.rst  fieldImport.rst  fieldRemove.rst  filter.rst  img2track.rst  info.rst  map2img.rst  map2surf.rst  map2track.rst  merge.rst  resample.rst  select.rst  track.rst  track2img.rst  track2surf.rst  transform.rst
doc/source/guide/: FOD.rst  pathways.rst  tutorial.rst
doc/source/installation/: howToGetAndCite.rst
doc/source/manual/: trekker.rst
doc/source/publications/: publications.rst
doc/source/tips/: tip1.rst
doc/source/tutorials/: boldOptions.csv  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst
extensions/LONI_Pipeline/: trekker.pipe  trekker_example1.pipe  trekker_example2.pipe
extensions/matlab/: readTrekkerOutput.m
extensions/python/: demo.py  setup.py
extensions/python/cython/: Trekker.pxd  Trekker.pyx
extensions/tools/: aparc+aseg_to_trekkerACTlabels.py  trekker_addColor  trekker_mergeTracksWithPrefix
macosTest/: .track_test.sh.kate-swp
nibr/include/nibrary_v0.3.0/: nibrary.h
src/: cmd.cpp  main.cpp  trekker.cpp  trekker.h
src/base/: algorithm.cpp  algorithm.h  inputParser.cpp  inputParser.h  streamline.cpp  streamline.h  tractogram.cpp  tractogram.h
src/cmd/: addColor.cpp  cmd.h  convert.cpp  dMRI_cmd.cpp  dMRI_recon.cpp  dMRI_recon_transhi2015.cpp  diff.cpp  fieldExport.cpp  fieldImport.cpp  fieldRemove.cpp  filter.cpp  img2track.cpp  info.cpp  map2img.cpp  map2surf.cpp  map2track.cpp  merge.cpp  resample.cpp  select.cpp  track.cpp  track2img.cpp  track2surf.cpp  transform.cpp  trekker.cpp
src/conf/: CLI11.hpp  CLI11_bak  aux.cpp  aux.h  auxiliary.cpp  config.cpp  config.h
src/config/: config_general.cpp  config_general.h  config_output.cpp  config_output.h  config_pathway.cpp  config_pathway.h  config_seeding.cpp  config_seeding.h  config_tracker.cpp  config_tracker.h  multithreader.cpp  multithreader.h  notset.h
src/image/: fod_image.cpp  fod_image.h  image.cpp  image.h  roi_image.cpp  roi_image.h  scalar_image.cpp  scalar_image.h  voxel.cpp  voxel.h
src/math/: coordinate.cpp  coordinate.h  doRandomThings.cpp  doRandomThings.h  math_aux.cpp  math_aux.h  sphericalHarmonics.cpp  sphericalHarmonics.h
src/nifticlib-2.0.0/niftilib/: nifti1_io.h
src/nifticlib-2.0.0/znzlib/: znzlib.h
src/python/: LICENSE  README.md  setup.py
src/python/cython/: Trekker.pyx
src/tracker/: tracker_pathwayChecker.h  tracker_seeder.h  tracker_thread.cpp  tracker_thread.h
testScripts/: out.vtk  test_linux.sh  test_mac.sh  test_win.bat
tests/testData/: L_LGN.vtk  L_V1.vtk
tests/testScripts/: test_mac.sh  test_macOS.sh  test_win.bat  test_win_disp_file_info.bat
(+257 files in other folders)
